bundle/00-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: traefik
  name: traefik
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: kubernetes-dashboard
  name: kubernetes-dashboard
