bundle/03-traefik-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefikv2
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
    - protocol: TCP
      name: dashboard
      port: 8080
    - protocol: TCP
      name: https
      port: 443
    - protocol: TCP
      name: metrics
      port: 6969
  selector:
    app: traefik
